--- a/macros.tex
+++ b/macros.tex
@@ -1,48 +1,57 @@
-%\newcommand{\eps}{\epsilon}
-\newcommand{\veps}{\varepsilon}
-%\newcommand{\Qed}{\begin{flushright}\qed\end{flushright}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% GENERAL
 
-%\newcommand{\parinn}{\setlength{\parindent}{1cm}}
-%\newcommand{\parinf}{\setlength{\parindent}{0cm}}
-
-% \newcommand{\norm}{\|\cdot\|}
-%\newcommand{\inorm}{\norm_{\infty}}
-%\newcommand{\opensets}{\{V_{\alpha}\}_{\alpha\in I}}
-%\newcommand{\oset}{V_{\alpha}}
-%\newcommand{\opset}[1]{V_{\alpha_{#1}}}
-%\newcommand{\lub}{\text{lub}}
-%\newcommand{\del}[2]{\frac{\partial #1}{\partial #2}}
-%\newcommand{\Del}[3]{\frac{\partial^{#1} #2}{\partial^{#1} #3}}
-%\newcommand{\deld}[2]{\dfrac{\partial #1}{\partial #2}}
-%\newcommand{\Deld}[3]{\dfrac{\partial^{#1} #2}{\partial^{#1} #3}}
-%\newcommand{\der}[2]{\frac{\mathrm{d} #1}{\mathrm{d} #2}}
-% \newcommand{\ddd}[3]{\frac{\mathrm{d}^{#3} #1}{\mathrm{d}^{#3} #2}}
-%\newcommand{\lm}{\lambda}
-%\newcommand{\uin}{\mathbin{\rotatebox[origin=c]{90}{$\in$}}}
-%\newcommand{\usubset}{\mathbin{\rotatebox[origin=c]{90}{$\subset$}}}
-%\newcommand{\lt}{\left}
-%\newcommand{\rt}{\right}
-%\newcommand{\bs}[1]{\boldsymbol{#1}}
-%\newcommand{\exs}{\exists}
-%\newcommand{\st}{\strut}
-%\newcommand{\dps}[1]{\displaystyle{#1}}
-%\newcommand{\id}{\text{id}}
-
-
-%\newcommand{\sol}{\setlength{\parindent}{0cm}\textbf{\textit{Solution:}}\setlength{\parindent}{1cm} }
-%\newcommand{\solve}[1]{\setlength{\parindent}{0cm}\textbf{\textit{Solution: }}\setlength{\parindent}{1cm}#1 \Qed}
-
-%%%%%%%%%%%%%%%%%%%%%%%%
-%MEINE COMMANDS
-
-\renewcommand{\implies}{\Rightarrow}
-\newcommand{\e}{\mathrm{e}}
+\newcommand{\e}{\mathrm{e}} % Der hier von \eul redefined
+\newcommand{\imag}{\mathrm{i}}
+%\newcommand{\dif}[1]{\mathrm{d}#1} not needed (fixdif package)
+\newcommand{\Le}{\mleft}
+\newcommand{\Ri}{\mright}
+\newcommand{\RR}{\mathbb{R}}
+\newcommand{\ensp}{\enspace}
 \newcommand{\sbst}{\subset}
+\newcommand{\id}{\mathbb{1}}
+\renewcommand{\implies}{\Rightarrow}
 \newcommand{\openint}[2]{{]{#1,#2}[}}
+\newcommand{\diag}[1]{\mathrm{diag}\Le\{#1\Ri\}}
+\DeclarePairedDelimiterXPP\Exp[1]{\operatorname{exp}}{(}{)}{}{#1} %exp Operator mit passendem Klammern Spacing oder so
+\newcommand{\bv}[1]{\symbfit{#1}} % bolt vector
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% SYMBOLS
+
+\newcommand{\veps}{\varepsilon}
+\newcommand{\vphi}{\varphi}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% TOPOLGY
+
 \DeclareMathOperator{\accumulated}{acc}
 \DeclareMathOperator{\isolated}{iso}
 \DeclareMathOperator{\interior}{int}
 \DeclareMathOperator{\exterior}{ext}
-\DeclareMathOperator{\edge}{\partial\!}
+\newcommand{\edge}{\partial}
 \DeclareMathOperator{\CauchySeq}{\text{CF}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% LINEAR ALGEBRA
+
 \DeclareMathOperator{\trace}{Tr}
+\DeclareMathOperator*{\Vektor}{\scalerel*{V}{\sum}}
+\DeclareMathOperator{\core}{ker}
+%\DeclareMathOperator{\span}{span}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% VECTOR CALCULUS
+
+\newcommand{\nbl}{\symbfup{\nabla}}
+\DeclareMathOperator{\grad}{grad}
+\DeclareMathOperator{\divgc}{div}
+\DeclareMathOperator{\rot}{rot}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% PHYSICS
+\newcommand{\poiss}[2]{\Le\{#1,#2\Ri\}} % Poissant brackets
+
+%\prime
+%\dprime
+%\trprime
