--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 \input{preamble}
 \usepackage{scalerel}
-\input{../macros.tex}
+\input{macros.tex}
 \input{letterfonts}
 
 \title{\sffamily \textbf{\Huge Definitionen und Sätze der HM 1 \& 2}}
