Aufrechte Setzung von Indizes

--- a/main.tex
+++ b/main.tex
@@ -966,24 +966,24 @@ Sonst: linear abhängig
 }
 
 \dfn{}{
-Der Spaltenrang \(r_s(A)\) von \(A \in M^{m,n}\) ist die größtmögliche Anzahl linear unabhängiger Spalten von \(A\).
+Der Spaltenrang \(r_{\text{s}}(A)\) von \(A \in M^{m,n}\) ist die größtmögliche Anzahl linear unabhängiger Spalten von \(A\).
 }
 
 \dfn{}{
-Der Zeilenrang \(r_z(A)\) von \(A \in M^{m,n}\) ist die größtmögliche Anzahl linear unabhängiger Zeilen von \(A\).
+Der Zeilenrang \(r_{\text{z}}(A)\) von \(A \in M^{m,n}\) ist die größtmögliche Anzahl linear unabhängiger Zeilen von \(A\).
 }
 
-\thm{Satz vom Rang}{\[r(A) = r_z(A) = r_s(A)\]}
+\thm{Satz vom Rang}{\[r(A) = r_{\text{z}}(A) = r_{\text{s}}(A)\]}
 
 \dfn{}{Die Dimension eines Vektorraums ist die größtmögliche Anzahl linear unabhängiger Vektoren aus diesem Raum.}
 
 \dfn{Lineare Hülle}{
-\[\Le\{\alpha_1 f_1 + \hdots + \alpha_k f_k \colon \alpha_1,\hdots,\alpha_k \in \KK\Ri\} = V\{f_1,\hdots,f_k\} = \Vektor_{j=1}^k \{f_x\}\]
+\[\Le\{\alpha_1 f_1 + \hdots + \alpha_k f_k \colon \alpha_1,\hdots,\alpha_k \in \KK\Ri\} \enspace=\enspace V\{f_1,\hdots,f_k\} \enspace=\enspace \Vektor_{j=1}^k \{f_x\}\]
 lineare Hülle des Systems \(\{f_1,\hdots,f_k\}\)
 }
 
 \thm{}{
-\(\{f_1,\hdots,f_x\} \sbst E\) linear unabhängig\\
+\(\{f_1,\hdots,f_x\} \sbst E\) linear unabhängig\vspace{4pt}\\
 \(k \in \NN, \Vektor_{j=1}^k f_j = E\)
 \[\implies \quad \dim{E} = k\]
 }
