--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,9 @@
   {0pt}
   {}
 
+\usepackage{microtype}
+\usepackage[no-script, no-inner, no-close]{innerscript}
+
 \usepackage{unicode-math}
 \setmathfont{NewCMMath-Book}
 \setmathfont{NewCMMath-Book}[range=cal, StylisticSet=1]
