--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,7 @@
 
 
 \usepackage[ngerman]{babel}
+\usepackage{csquotes}
 \usepackage{titlesec}
 \titleformat{\chapter}[hang]
   {\normalfont\LARGE\bfseries}
