--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{fixdif,derivative}
 \usepackage{physics2}
 \usephysicsmodule{ab.legacy}
+\usepackage{twemojis}
 
 % SCHRIFTEN - MUSS NACH MATHTOOLS GELADEN WERDEN, SONST IST Z. B. \UNDEBRACE FEHLERHAFT!!!
 \PassOptionsToPackage{math-style=ISO}{unicode-math}
