--- a/main.tex
+++ b/main.tex
@@ -1332,7 +1332,11 @@ ist eine Norm auf \(\mathcal{L}(E,F)\). Sind \(E\) und \(F\) vollständig, dann 
 \section{Differenzierbarkeit}
 
 \dfn{Partielle Ableitung in \(x_j\)-Richtung}{
-\[\eval{\pdv{f}{x_j}}_{x=x^{(0)}} = \eval{\odv{\Le(f\Le(x^{(0)} + t \mathbb{e}_j\Ri)\Ri)}{t}}_{t=0} = \lim_{\tau \to 0} \frac{f\Le(x_1^{(0)}, \hdots, x_{j-1}^{(0)}, x_j^{(0)} + \tau, x_{j+1}^{(0)}, \hdots, x_n^{(0)}\Ri)}{\tau}\]
+	\begin{multline*}
+		\eval{\pdv{f}{x_j}}_{x=x^{(0)}} = \eval{\odv{\Le(f\Le(x^{(0)} + t \mathbb{e}_j\Ri)\Ri)}{t}}_{t=0} \\[5pt]
+		= \lim_{\tau \to 0} \frac{f\Le(x_1^{(0)}, \hdots, x_{j-1}^{(0)}, x_j^{(0)} + \tau, x_{j+1}^{(0)}, \hdots, x_n^{(0)}\Ri) - f\Le(x_1^{(0)}, \hdots, x_n^{(0)}\Ri)}{\tau}
+	\end{multline*}
+%\[\eval{\pdv{f}{x_j}}_{x=x^{(0)}} = \eval{\odv{\Le(f\Le(x^{(0)} + t %\mathbb{e}_j\Ri)\Ri)}{t}}_{t=0} = \lim_{\tau \to 0} \frac{f\Le(x_1^{(0)}, \hdots, %x_{j-1}^{(0)}, x_j^{(0)} + \tau, x_{j+1}^{(0)}, \hdots, x_n^{(0)}\Ri) - f\Le(x_1^{(0)}, %\hdots, x_n^{(0)}\Ri)}{\tau}\]
 }
 
 \dfn{}{
@@ -1490,7 +1494,14 @@ gelten.
 }
 
 \thm{}{
-idk
+\(f \colon U \sbst \RR[m] \to \RR[m], \enspace U\) offen\\
+\(f \in C^p\)\\
+\(p \geqslant 1, \enspace p \in \NN\)\vspace{3pt}\\
+\(y^{(0)} = f\Le(x^{(0)}\Ri) \text{ für } x^{(0)} \in U\)\vspace{3pt}\\
+Sei \(f'\Le(x^{(0)}\Ri)\) invertierbar.
+\[\implies \quad \exists \text{ offene Mengen } U_{x^{(0)}}, \enspace V_{y^{(0)}} \neq 0\]
+\(x^{(0)} \in U_{x^{(0)}}, \enspace y^{(0)} \in V_{y^{(0)}}; \enspace f \colon U_{x^{(0)}} \to V_{x^{(0)}}\)\\
+\(+ \quad \Le(f^{-1}\Ri)_y' = - \Le[\Phi_x'\Ri]^{-1} \cdot \Phi_y' = \Le[f_x'\Ri]^{-1}\)
 }
 
 
